# jue

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build_and_copy.ps1  build_and_copy.sh  cargo.toml  check.bat  check.sh  dan_world_testing_plan.md  fix_opcode.ps1  fix_remaining_symbols.ps1  fix_symbol_duplicates.ps1  j  jue_world_reorganization_plan.md  test_nat_pair_reduction.rs  verify_implementation.jue
core_world/: Cargo.toml  debug_debruijn.rs  debug_double_app.rs  debug_eval_issue.rs  debug_normalization.rs  debug_normalization_issue.rs  debug_step_by_step.rs  debug_substitution_detailed.rs  debug_substitution_issue.rs  debug_test.rs
core_world/src/: core_expr.rs  core_kernel.rs  eval_relation.rs  eval_relation_debug.rs  lib.rs  proof_checker.rs
core_world/src/test/: core_expr_serialization_tests.rs  core_expr_tests.rs  core_kernel_beta_tests.rs  core_kernel_stack_tests.rs  core_kernel_substitution_tests.rs  proof_checker_serialization_tests.rs  proof_checker_tests.rs
core_world/tests/: debug_combinator.rs  debug_debruijn.rs  debug_edge_cases.rs  debug_error_handling.rs  debug_step_by_step.rs  debug_test.rs  test_alpha_equivalence_comprehensive.rs  test_alpha_equivalence_integration.rs  test_alpha_equivalence_proof.rs  test_already_normal_form.rs  test_application_creation.rs  test_application_display.rs  test_application_elimination.rs  test_application_elimination_complex.rs  test_application_elimination_simple.rs  test_beta_reduction_comprehensive.rs  test_beta_reduction_performance.rs  test_beta_reduction_proof.rs  test_cbv_verification.rs  test_closure_application.rs  test_closure_application_comprehensive.rs  test_complex_environment.rs  test_complex_expression_construction.rs  test_complex_expression_flow.rs  test_complex_expression_handling.rs  test_complex_nested_reduction.rs  test_complex_normalization_sequence.rs  test_complex_substitution.rs  test_complex_substitution_normalization.rs  test_composite_proof.rs  test_conformance.rs  test_consistency_proof.rs  test_constant_function_reduction.rs  test_core_expr_comprehensive.rs  test_core_expression_stress.rs  test_core_kernel_eval_consistency.rs  test_correctness.rs  test_coverage_gaps.rs  test_debug_comprehensive.rs  test_debug_debruijn.rs  (+53 more)
jue_examples/: Cargo.toml  TEST_RESULTS.md  arithmetic.jue  complex.jue  debug_ast.rs  debug_parser.rs  hello_world.jue  lambda.jue  test_compiler.rs  test_hello_world.rs  test_recursive_execution.rs  test_suite.rs
jue_examples/complex_examples/: README.md  TEST_RESULTS.md  test_recursion_comprehensive.jue
jue_examples/complex_examples/debug/: lambda_in_let.jue  simple_application.jue  simple_conditional.jue  simple_function.jue  simple_recursion.jue  test_jump.jue  test_simple_value.jue
jue_examples/complex_examples/level1/: 01_simple_arithmetic.jue  02_basic_functions.jue
jue_examples/complex_examples/level2/: 03_conditional_logic.jue  04_let_bindings.jue
jue_examples/complex_examples/level3/: 05_function_composition.jue  06_recursive_functions.jue
jue_world/: Cargo.toml  compiler.jue  concurrency.jue  debug_bytecode_test.rs  evaluator.jue  ffi_test_isolated.rs  macros.jue  parser.jue  recursion_compilation_analysis.rs  recursion_debug_test.rs  simple_test.rs
jue_world/src/: ast.rs  capability_ffi.rs  compiler.rs  comptime.rs  error.rs  expression_parser.rs  ffi.rs  lib.rs  macro_system.rs  parser.rs  parser_symbol_fix.rs  parser_tokenize_fix.rs  recursion_analysis.rs  recursion_analysis_tests  resource_limits.rs  sandbox.rs  sandboxed_comptime.rs  structured_error.rs  test_timeout.rs  token.rs  trust_tier.rs  type_system.rs
jue_world/src/compiler/: bytecode_generation.rs  capability_analysis.rs  capability_checking.rs  compiler.rs  core_compilation.rs  environment.rs  mod.rs
jue_world/src/core_compilation/: capability_analysis.rs  core_compiler.rs  escape_analysis.rs  mod.rs  proof_generator.rs
jue_world/src/ffi/: mod.rs
jue_world/src/ffi_system/: capability_mediator.rs  ffi_call_generator.rs  global_ffi_registry.rs  mod.rs  standard_functions.rs
jue_world/src/integration/: core.rs  mod.rs  physics.rs  physics_wrapper.rs
jue_world/src/macro_system/: macro_expander.rs  (+2 more)
jue_world/tests/: simple_physics_world_validation.rs  test_closure_environment_capture.rs  test_physics_world_integration_comprehensive.rs  test_realistic_recursion_validation.rs  test_recursion_bridge.rs  test_recursive_function_execution.rs  test_simple_recursion.rs  test_symbol_compilation.rs  test_tco_compiler.rs
juec/: Cargo.toml  README.md  build.rs
juec/src/: lib.rs  main.rs  mock_main.rs
juec/tests/: binary_operators_test.jue  compile_tests.rs  complex_test.jue  comprehensive_test.jue  debug_binary_parsing.rs  edge_case_test.jue  helloworld_test.rs  literal_test.jue  mixed_test.jue  test_binary_parsing.rs  test_compilation_simple.rs  test_data_test.rs  test_identifier.jue  test_nom_parser.rs  test_phase_3_compilation.rs
physics_layer/: Cargo.toml
physics_layer/src/: atomic_ops.rs  lib.rs  memory_manager.rs  primitives.rs
physics_layer/tests/: test_arithmetic_operations.rs  test_arithmetic_properties.rs  test_atomic_operations.rs  test_atomic_properties.rs  test_atomic_thread_safety.rs  test_coverage_gaps.rs  test_division_by_zero.rs  test_large_memory_allocations.rs  test_memory_allocation.rs  test_memory_defragmentation.rs  test_memory_error_handling.rs  test_memory_fragmentation.rs  test_memory_leak_detection.rs  test_memory_management.rs  test_memory_read_write_operations.rs  test_memory_statistics.rs  test_physics_integration.rs  test_physics_performance.rs  test_snapshot_and_rollback.rs  test_thread_safe_memory.rs  test_thread_safe_memory_operations.rs
(+521 files in other folders)
