[package]
name = "jue"
version = "0.1.0"
edition = "2021"
authors = ["Project Jue Team"]
description = "AGI stack: Core-World, Jue-World, Dan-World, Physics-World"
license = "MIT"

[workspace]
members = [
    "core_world",
    "physics_world",
    "integration",
    "jue_world",
    "jue_examples"
]

[dependencies]
# Core Rust dependencies
serde = { version = "1.0", features = ["derive"] }  # Serialization for proofs & AST
serde_json = "1.0"                                  # Optional JSON output for logging/proofs
anyhow = "1.0"                                      # Error handling
thiserror = "1.0"                                   # Custom errors

# Async & concurrency for future message passing
tokio = { version = "1.30", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.10"

# Optional math / numeric ops
num-traits = "0.2"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Local dependencies
core_world = { path = "core_world" }
physics_world = { path = "physics_world" }
jue_world = { path = "jue_world" }

[features]
core_world_tests = []

[dev-dependencies]
# Testing
proptest = "1.0"           # Property-based testing for Core proofs
criterion = "0.4"          # Benchmarking
