[package]
name = "core_world"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
criterion = "0.4"

[[bin]]
name = "debug_normalization_issue"
path = "debug_normalization_issue.rs"

[[bin]]
name = "debug_substitution_detailed"
path = "debug_substitution_detailed.rs"

[[bin]]
name = "debug_test"
path = "debug_test.rs"

[[bin]]
name = "debug_double_app"
path = "debug_double_app.rs"
