[package]
name = "jue_examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_suite"
path = "test_suite.rs"

[[bin]]
name = "test_recursive_execution"
path = "test_recursive_execution.rs"

[[bin]]
name = "debug_ast"
path = "debug_ast.rs"

[dependencies]
jue_world = { path = "../jue_world" }
physics_world = { path = "../physics_world" }