[package]
name = "jue_world"
version = "0.1.0"
edition = "2021"

[dependencies]
core_world = { path = "../core_world" }
physics_world = { path = "../physics_world" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
proptest = "1.0"
criterion = "0.4"

[lib]
name = "jue_world"
path = "src/lib.rs"